--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=root
-password=1234
-dburl=jdbc:mysql://localhost:3306/biblioteca
+password=""
+dburl=jdbc:mysql://localhost:3306/seu-banco-de-dados
 useSSL=false
